--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     <org.gatein.pc.version>2.4.0.Final</org.gatein.pc.version>
     <org.gatein.sso.version>1.3.0.Final</org.gatein.sso.version>
     <org.picketlink.idm>1.4.0.Final</org.picketlink.idm>
-    <org.gatein.wsrp.version>2.2.0.CR03</org.gatein.wsrp.version>
+    <org.gatein.wsrp.version>2.2.0.Final</org.gatein.wsrp.version>
     <org.gatein.mop.version>1.2.0.Final</org.gatein.mop.version>
     <org.gatein.mgmt.version>1.1.0.Final</org.gatein.mgmt.version>
     <org.slf4j.version>1.6.1</org.slf4j.version>
@@ -57,7 +57,7 @@
     <rhino.version>1.6R5</rhino.version>
     <org.codehaus.groovy.version>1.7.6</org.codehaus.groovy.version>
     <javax.servlet.version>2.5</javax.servlet.version>
-    <version.chromattic>1.2.0-beta2</version.chromattic>
+    <version.chromattic>1.2.0</version.chromattic>
     <version.reflext>1.1.0</version.reflext>
     <org.staxnav.version>0.9.6</org.staxnav.version>
     <jcip.version>1.0</jcip.version>
