--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,11 @@
     <nl.captcha.simplecaptcha.version>1.1.1.Final-gatein-3</nl.captcha.simplecaptcha.version>
     <org.gatein.api.version>1.0.0.Alpha01</org.gatein.api.version>
     <org.gatein.common.version>2.1.0.Final</org.gatein.common.version>
-    <org.gatein.wci.version>2.3.0.Final</org.gatein.wci.version>
-    <org.gatein.pc.version>2.4.0.Final</org.gatein.pc.version>
+    <org.gatein.wci.version>2.3.1.CR01</org.gatein.wci.version>
+    <org.gatein.pc.version>2.4.1.CR02</org.gatein.pc.version>
     <org.gatein.sso.version>1.3.1.Final</org.gatein.sso.version>
     <org.picketlink.idm>1.4.1.Final</org.picketlink.idm>
-    <org.gatein.wsrp.version>2.2.2.Final</org.gatein.wsrp.version>
+    <org.gatein.wsrp.version>2.2.3.Final</org.gatein.wsrp.version>
     <org.gatein.mop.version>1.2.0.Final</org.gatein.mop.version>
     <org.gatein.mgmt.version>2.0.0.Beta01</org.gatein.mgmt.version>
     <org.slf4j.version>1.6.1</org.slf4j.version>
