GTNPORTAL-2957: extracted shindig-related dependencies into a module to prevent issues with ehcache and jbossws-cxf with wsrp and wss :( - Created org.gatein.shindig module - Created org.json module used both by org.gatein.lib and org.gatein.shindig - Cleaned-up org.gatein.lib module - Added MANIFEST dependencies on org.gatein.shindig module in eXoGadgetServer war

--- a/gadgets/server/pom.xml
+++ b/gadgets/server/pom.xml
@@ -34,6 +34,19 @@
 
   <build>
     <finalName>eXoGadgetServer</finalName>
+    <plugins>
+      <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-war-plugin</artifactId>
+         <configuration>
+            <archive>
+               <manifestEntries>
+                  <Dependencies>org.gatein.shindig</Dependencies>
+               </manifestEntries>
+            </archive>
+         </configuration>
+      </plugin>
+     </plugins>
   </build>
 
   <dependencies>
